# ray

./: .gitignore  CMakeLists.txt  Makefile  README.md  gbtOpticalConstants.h  listDeleteListList.c  listDeleteNext.c  listNodeCheck.c  mathSyminv2.c  mathVectorMatrix.h  mathZernike.c  ray.h  rayAddSurface.c  rayGenerator.c  rayGetFoci.c  rayGetPlanes.c  rayMain.c  rayPltPS.c  rayPltSystem.c  rayPrtBundles.c  rayPrtFoci.c  rayPrtPlanes.c  rayPrtSegments.c  rayPrtSystem.c  rayRaytraceMemo.ps  rayTestCase1.ref  rayTestCase2.in  rayTestCase3.in  rayTrace.c
src/: listAlloc.c  listAppend.c  listDeleteList.c  listFree.c  listInitialize.c  listInsertAfter.c  listNodeCheck.c  listNodeCreate.c  listNodeDelete.c  mathSyminv2.c  mathVectorMatrix.h  ray.h  rayAddSurface.c  rayGenerator.c  rayGetPlanes.c  rayMain.c  rayPltSystem.c  rayPrtFoci.c  rayPrtPlanes.c  rayPrtSystem.c  rayTrace.c
tests/: rayTestCase1.in  rayTestCase1.ref  rayTestCase2.in  rayTestCase2.ref  rayTestCase3.in  rayTestCase3.ref  rayTestCase4.in  rayTestCase4.ref
